2003-10-03  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.h,
	* src/z80/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/mcs51/gen.h
	* src/mcs51/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/ds390/gen.h
	* src/ds390/gen.c (aopOp, aopGet, aopPut, genDummyRead),
	* src/SDCCicode.c (ast2iCode, geniCodeDummyRead): Fixed bug #663539
	* src/SDCCopt.c (killDeadCode): Fixed bugs #663539 & #816705

2003-10-02  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (genRet): fixed bug #524753
	* src/z80/gen.c (genCast): fixed internal error on cast from
	pointer to long
	* src/z80/gen.c (_saveRegsForCall, emitCall): adapted Johan's
	fix for bug #477835 to the z80
	* src/z80/gen.c (genZ80code, _vemit2, _emit2): added support
	for tracking iCodes in the peephole optimizer for z80

2003-10-01  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable, geniCodeSwitch): fixed
	the other part of bug #814548
	* src/SDCCpeeph.c (labelInRange): fixed bug #814558

2003-09-30  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCcse.c: fixed part of bug #814548

2003-09-28  Borut Razem <borut.razem@siol.net>

	* src/asm.c: rewrite of printILine() to use temporary file instead
	  a pipe
	* src/xa51/main.c: commented out declaration of int rewinds

2003-09-27  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable): Fixed bug #813206

2003-09-26  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCdflow.c (computeDataFlow): Fixed bug #810746
	* src/asm.c (printILine): Fixed bug #811015

2003-09-22  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	*link/z80/lklibr.c, as/mcs51/lklibr.c: Improved memory allocation and
	freeing.

2003-09-21  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (setupToPreserveCarry): Fixed bug #796955
	* src/z80/gen.c (setupPair, genMovePairPair): Fixed setupPair
	to correctly handle general case of AOP_PAIRPTR