@@ -45,7 +45,7 @@ typedef struct eBBlock
     iCode *ech;			/* pointer to last of code chain  */
 
     struct eBBlock *preHeader;	/* preheader if this is a loop entry */
-    struct region *partOfLoop;	/* pointer to the loop region this block is part of */
+    set *partOfLoop;	/* set of loop regions this block is part of */
 
     /* control flow analysis */
     set *succList;		/* list eBBlocks which are successors  */
