@@ -1,3 +1,11 @@
+2003-10-04 Bernhard Held <bernhard@bernhardheld.de>
+
+	Applied liferange patch from Klaus Flittner <klaus_flittner@gmx.de>
+	* src/SDCCBBlock.h
+	* src/SDCCloop.c
+	* src/SDCCloop.h
+	* src/SDCClrange.c
+
 2003-10-03  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* src/z80/gen.h,
